packages/next-swc/crates/core/tests/errors/next-font-loaders/spread-arg/output.js
import inter from '@next/font/google/target.css?{"path":"pages/test.tsx","import":"Inter","arguments":[{},[]]}';
const a = fn(...{}, ...[]);
